deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice
spec:
  template:
    spec:
      containers:
        - $patch: replace
        - name: node
          image: node:erbium-alpine
          command: ['sh', '-c', 'cd /usr/app/src; node server.js']
          ports:
          - name: "web"
            containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
          volumeMounts:
          - name: code-dir
            mountPath: /usr/app/src
      volumes:
        - name: code-dir
          emptyDir: {}
